# tesseract-decoder

./: .bazelrc  .clang-format  .dir-locals.el  .editorconfig  .gitignore  .markdownlintrc  .shellcheckrc  .vimrc  AGENTS.md  BUILD  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  MODULE.bazel  README.md  SUPPORT.md  WORKSPACE  _update_bazel_py_version.py  _version.py  common.cc  common.h  common.test.cc  generate_stubs.py  requirements.txt  setup.py  simplex.cc  simplex.h  simplex_main.cc  tesseract.cc  tesseract.h  tesseract.perf.cc  tesseract.test.cc  tesseract_main.cc  test_data.h  try.stim  utils.cc  utils.h
.github/: CODEOWNERS  SECURITY.md  ci.yml  dependabot.yaml
.github/ISSUE_TEMPLATE/: 2-feature-request.yml  3-task.yml
.github/workflows/: ci.yml  citation-updater.yaml  nightly.yaml  osv-scanner.yaml  prerelease.yml  scorecard-scanner.yaml  stable-release-workflow.yml  stale.yml
benchmarking/: benchmark.py  circuits.json  plotting.py  workspace.py
benchmarking/gari/: README.md  interactive_plot.py  submit.sh  submit_locally.sh
benchmarking/sparsify_errors/: README.md  aggregated_results.jsonl  plot.py  submit.sh
benchmarking/testsuite/: r=11,d=11,p=0.001,noise=si1000,c=surface_code_trans_cx_X,q=482,gates=cz.stim  r=11,d=11,p=0.002,noise=si1000,c=superdense_color_code_X,q=181,gates=cz.stim  r=23,d=23,p=0.001,noise=uniform,c=surface_code,q=2025,gates=cx.stim  r=23,d=23,p=0.008,noise=uniform,c=surface_code,q=2025,gates=cx.stim  r=29,d=29,p=0.001,noise=uniform,c=surface_code,q=3249,gates=cx.stim  r=9,d=9,p=0.001,noise=si1000,c=superdense_color_code_X,q=121,gates=cz.stim  r=9,d=9,p=0.002,noise=si1000,c=superdense_color_code_X,q=121,gates=cz.stim
benchmarks/: at_most_two_errors_per_detector.ipynb  plot.py  run.py  run_and_collect.py  utils.py
devtools/: build_with_custom_toolchain.sh
docs/: BUILD  sync_tutorial_notebook.py  tutorial.ipynb  tutorial.py
src/: BUILD  bern_utils.cc  bern_utils.h  bp_main.cc  common.cc  common.h  common.pybind.h  common.test.cc  confidences_decoder.cc  confidences_decoder.h  confidences_decoder.test.cc  dem_decomposition.cc  dem_decomposition.h  dem_decomposition.test.cc  error_correlations.cc  error_correlations.h  error_correlations.test.cc  multi_pass_sinter_compat.pybind.h  multi_pass_tesseract_decoder.cc  multi_pass_tesseract_decoder.h  multi_pass_tesseract_decoder.test.cc  multithread.cc  multithread.h  simplex.cc  simplex.h  simplex.pybind.h  simplex_main.cc  stim_utils.pybind.h  tanner_graph.cc  tanner_graph.h  tanner_graph.test.cc  tesseract.cc  tesseract.h  tesseract.perf.cc  tesseract.pybind.cc  tesseract.pybind.h  tesseract.test.cc  tesseract_ftl.cc  tesseract_ftl.h  tesseract_ftl_main.cc  (+25 more)
src/bp/: batched_bp_parallel_min_sum.h  batched_bp_parallel_min_sum.inl  batched_bp_parallel_min_sum.test.cc  batched_bp_serial_min_sum.h  batched_bp_serial_min_sum.inl  batched_bp_serial_min_sum.test.cc  batched_tanner_graph.h  bp.pybind.h  bp_parallel_min_sum.h  bp_parallel_min_sum.inl  bp_parallel_min_sum.test.cc  bp_params.h  bp_serial_min_sum.h  bp_serial_min_sum.inl  bp_serial_min_sum.test.cc  (+23 more)
testdata/: BUILD  README.md  r=1,d=11,p=0.01,noise=data_qubit_X,c=color_code_mpp,q=91,gates=mpp.stim  r=1,d=11,p=0.019002,noise=data_qubit_X,c=color_code_mpp,q=91,gates=mpp.stim  r=1,d=11,p=0.029151,noise=data_qubit_X,c=color_code_mpp,q=91,gates=mpp.stim  r=1,d=11,p=0.036106,noise=data_qubit_X,c=color_code_mpp,q=91,gates=mpp.stim  r=1,d=11,p=0.055392,noise=data_qubit_X,c=color_code_mpp,q=91,gates=mpp.stim  r=1,d=11,p=0.068608,noise=data_qubit_X,c=color_code_mpp,q=91,gates=mpp.stim  r=1,d=11,p=0.084978,noise=data_qubit_X,c=color_code_mpp,q=91,gates=mpp.stim  r=1,d=11,p=0.105254,noise=data_qubit_X,c=color_code_mpp,q=91,gates=mpp.stim  r=1,d=11,p=0.130367,noise=data_qubit_X,c=color_code_mpp,q=91,gates=mpp.stim  r=1,d=11,p=0.161473,noise=data_qubit_X,c=color_code_mpp,q=91,gates=mpp.stim  r=1,d=11,p=0.2,noise=data_qubit_X,c=color_code_mpp,q=91,gates=mpp.stim  r=1,d=13,p=0.01,noise=data_qubit_X,c=color_code_mpp,q=127,gates=mpp.stim  r=1,d=13,p=0.015341,noise=data_qubit_X,c=color_code_mpp,q=127,gates=mpp.stim  r=1,d=13,p=0.023535,noise=data_qubit_X,c=color_code_mpp,q=127,gates=mpp.stim  r=1,d=13,p=0.036106,noise=data_qubit_X,c=color_code_mpp,q=127,gates=mpp.stim  r=1,d=13,p=0.044721,noise=data_qubit_X,c=color_code_mpp,q=127,gates=mpp.stim  r=1,d=13,p=0.055392,noise=data_qubit_X,c=color_code_mpp,q=127,gates=mpp.stim  r=1,d=13,p=0.068608,noise=data_qubit_X,c=color_code_mpp,q=127,gates=mpp.stim  r=1,d=13,p=0.130367,noise=data_qubit_X,c=color_code_mpp,q=127,gates=mpp.stim  r=1,d=13,p=0.161473,noise=data_qubit_X,c=color_code_mpp,q=127,gates=mpp.stim  r=1,d=15,p=0.01,noise=data_qubit_X,c=color_code_mpp,q=169,gates=mpp.stim  r=1,d=15,p=0.015341,noise=data_qubit_X,c=color_code_mpp,q=169,gates=mpp.stim  r=1,d=15,p=0.019002,noise=data_qubit_X,c=color_code_mpp,q=169,gates=mpp.stim  r=1,d=15,p=0.029151,noise=data_qubit_X,c=color_code_mpp,q=169,gates=mpp.stim  r=1,d=15,p=0.055392,noise=data_qubit_X,c=color_code_mpp,q=169,gates=mpp.stim  r=1,d=15,p=0.105254,noise=data_qubit_X,c=color_code_mpp,q=169,gates=mpp.stim  r=1,d=15,p=0.130367,noise=data_qubit_X,c=color_code_mpp,q=169,gates=mpp.stim  r=1,d=15,p=0.161473,noise=data_qubit_X,c=color_code_mpp,q=169,gates=mpp.stim  r=1,d=3,p=0.012386,noise=data_qubit_X,c=color_code_mpp,q=7,gates=mpp.stim  r=1,d=3,p=0.015341,noise=data_qubit_X,c=color_code_mpp,q=7,gates=mpp.stim  r=1,d=3,p=0.023535,noise=data_qubit_X,c=color_code_mpp,q=7,gates=mpp.stim  r=1,d=3,p=0.068608,noise=data_qubit_X,c=color_code_mpp,q=7,gates=mpp.stim  r=1,d=3,p=0.084978,noise=data_qubit_X,c=color_code_mpp,q=7,gates=mpp.stim  r=1,d=3,p=0.105254,noise=data_qubit_X,c=color_code_mpp,q=7,gates=mpp.stim  r=1,d=3,p=0.130367,noise=data_qubit_X,c=color_code_mpp,q=7,gates=mpp.stim  r=1,d=3,p=0.161473,noise=data_qubit_X,c=color_code_mpp,q=7,gates=mpp.stim  r=1,d=5,p=0.01,noise=data_qubit_X,c=color_code_mpp,q=19,gates=mpp.stim  r=1,d=5,p=0.029151,noise=data_qubit_X,c=color_code_mpp,q=19,gates=mpp.stim  (+47 more)
viz/: 3dviewer.html  README.md  index.html  to_json.py
(+839 files in other folders)
