module(name = "tesseract", version = "1.0")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")

DEFAULT_PYTHON_VERSION = "3.13"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = DEFAULT_PYTHON_VERSION,
    is_default = True,
    ignore_root_user_error = True,
)

python_configure = use_extension("@pybind11_bazel//:python_configure.bzl", "extension")
use_repo(python_configure, "local_config_python")


pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pypi",
    python_version = DEFAULT_PYTHON_VERSION,
    requirements_lock = "//src/py:requirements_lock.txt",
    extra_pip_args = ["--index-url=https://pypi.org/simple"],
)

use_repo(pip, "pypi")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
bazel_dep(name = "zlib", version = "1.3.2")

HIGHS_VERSION = "1.9.0"
HIGHS_SHA_256 = "dff575df08d88583c109702c7c5c75ff6e51611e6eacca8b5b3fdfba8ecc2cb4"

git_repository(
    name = "stim",
    commit = "bd60b73525fd5a9b30839020eb7554ad369e4337",
    remote = "https://github.com/quantumlib/stim.git",
    shallow_since = "1741128853 +0000",
)

http_archive(
    name = "highs",
    sha256 = HIGHS_SHA_256,
    build_file = "//external:highs.BUILD",
    strip_prefix = "HiGHS-" + HIGHS_VERSION,
    urls = ["https://github.com/ERGO-Code/HiGHS/archive/refs/tags/v" + HIGHS_VERSION + ".tar.gz"],
)

GTEST_VERSION = "1.13.0"

GTEST_SHA256 = "ad7fdba11ea011c1d925b3289cf4af2c66a352e18d4c7264392fead75e919363"

http_archive(
    name = "gtest",
    sha256 = GTEST_SHA256,
    strip_prefix = "googletest-%s" % GTEST_VERSION,
    urls = ["https://github.com/google/googletest/archive/refs/tags/v%s.tar.gz" % GTEST_VERSION],
)

ARGPARSE_SHA_256 = "3e5a59ab7688dcd1f918bc92051a10564113d4f36c3bbed3ef596c25e519a062"

http_archive(
    name = "argparse",
    build_file = "//external:argparse.BUILD",
    sha256 = ARGPARSE_SHA_256,
    strip_prefix = "argparse-3.1",
    urls = ["https://github.com/p-ranav/argparse/archive/refs/tags/v3.1.zip"],
)

git_repository(
    name = "nlohmann_json",
    commit = "9cca280a4d0ccf0c08f47a99aa71d1b0e52f8d03",
    remote = "https://github.com/nlohmann/json.git",
    shallow_since = "1701207391 +0100",
)




BOOST_VERSION = "1.83.0"
BOOST_ARCHIVE_NAME = "boost_{}".format(BOOST_VERSION.replace(".", "_"))

http_archive(
    name = "boost",
    urls = [
        "https://archives.boost.io/release/{}/source/{}.tar.gz".format(
            BOOST_VERSION,
            BOOST_ARCHIVE_NAME,
        )
    ],
    strip_prefix = BOOST_ARCHIVE_NAME,
    sha256 = "c0685b68dd44cc46574cce86c4e17c0f611b15e195be9848dfd0769a0a207628",
    build_file = "//external:boost.BUILD",
)

cc_compatibility_proxy = use_extension("@rules_cc//cc:extensions.bzl", "compatibility_proxy")
use_repo(cc_compatibility_proxy, "cc_compatibility_proxy")

